# holtz

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.txt  Makefile.am  README.md  configure.ac  dist_win64.sh  holtz.rc  holtz.sln  holtz.spec  line_net.hpp  msg_net_templ.cpp  util.hpp  wxholtz.hpp  wxmain.cpp  wxutil.cpp  wxutil.hpp
bloks/: Makefile.am  ai.cpp  animations.hpp  bloks.cpp  dialogs.cpp  dialogs.hpp  manager.hpp  wxbloks.cpp  wxbloks.hpp
common/: dialogs.cpp  manager.cpp  manager.hpp  network.cpp
docs/: bgp100a.ps  bgp100a_simple.ps  bgp100b.ps  footer.html
dvonn/: animations.hpp  dialogs.cpp  dialogs.hpp  dvonn.cpp  littlegolem.hpp  manager.cpp  manager.hpp  network.hpp  wxdvonn.cpp  wxdvonn.hpp
dvonn/skins/eins/: Makefile.am  field_grey.xpm  fix_xpm_warnings.sh
exe/: .gitignore
help/en/: help.hhc  help.hhp  helpteam.htm
holtz/: .cvsignore  ChangeLog  ChangeLog.txt  Makefile.am  Makefile.in  Rules.english  Rules.german  TODO  ai.cpp  ai.hpp  animations.cpp  animations.hpp  autogen.sh  bgp.cpp  bgp.hpp  configure  configure.ac  dialogs.cpp  dialogs.hpp  dist_win.sh  holtz-Debian_Etch.spec  holtz-Fedora_7.spec  holtz-Fedora_8.spec  holtz-Fedora_Extras_6.spec  holtz-Mandriva_2006.spec  holtz-Mandriva_2007.spec  holtz-SLE_10.spec  holtz-SUSE_Linux_10.1.spec  holtz-openSUSE_10.2.spec  holtz.cpp  holtz.dsp  holtz.dsw  holtz.hpp  holtz.sln  holtz.spec  holtz.vcproj  icon.xpm  line_net.cpp  line_net.hpp  manager.cpp  (+13 more)
holtz-win32-cross64/: .gitignore
holtz/bloks/: ai.cpp  ai.hpp  animations.cpp  animations.hpp  bgp.cpp  bgp.hpp  bloks.cpp  bloks.hpp  manager.cpp  network.cpp  network.hpp  pbm.cpp  pbm.hpp  wxbloks.cpp  wxbloks.hpp
holtz/common/: Makefile.am  bgp.cpp  bgp.hpp  dialogs.cpp  dialogs.hpp  manager.cpp  manager.hpp  network.cpp  network.hpp
holtz/docs/: Doxyfile  bgp100a_master.ps  bgp100b_master.ps  bgp100c.ps  bgp100c_master.ps
holtz/dvonn/: Makefile.am  ai.cpp  ai.hpp  animations.cpp  animations.hpp  bgp.cpp  bgp.hpp  dialogs.cpp  dialogs.hpp  dvonn.cpp  dvonn.hpp  littlegolem.cpp  manager.cpp  manager.hpp  network.cpp  network.hpp  pbm.cpp  pbm.hpp  wxdvonn.cpp  wxdvonn.hpp
holtz/dvonn/skins/: skin.ini.defaults
holtz/dvonn/skins/eins/: click_mark.xpm  field_black.xpm  field_empty.xpm  field_grey.xpm  field_mark.xpm  field_removed.xpm  skin.hpp  stone_black.xpm  stone_grey.xpm  stone_mark.xpm  stone_white.xpm
holtz/eins/: Makefile.in  field_empty.xpm  field_gray.xpm  field_mark.xpm  field_mark2.xpm  field_removed.xpm  field_white.xpm
holtz/help/: Makefile.am
holtz/help/en/: help.hhc  help.hhk  help.hhp  help.htm  help.htx  helpab.htm  helpbsum.htm  helpdsum.htm  helpintr.htm  helplic.htm  helpover.htm  helprdet.htm  helpref.htm  helprsum.htm  helprule.htm  helpteam.htm  helpxsum.htm  pack.sh
holtz/holtz-win32/: AUTHORS
holtz/holtz-win32/locale/de/LC_MESSAGES/: holtz.mo
holtz/install-win32/: .cvsignore  holtz.iss
holtz/locale/: Makefile.am
holtz/locale/de/LC_MESSAGES/: Makefile.am  holtz.mo  holtz.po  holtz.po.poedit
holtz/relax/: Makefile.am  ai.cpp  ai.hpp  animations.cpp  animations.hpp  dialogs.hpp  main.cpp  manager.cpp  manager.hpp  network.cpp  network.hpp  pbm.cpp  pbm.hpp  relax.cpp  relax.hpp  wxrelax.cpp  wxrelax.hpp
holtz/skins/: Makefile.am  Makefile.in  pack_skins  skin.ini.defaults
holtz/skins/eins/: Makefile.am  background.xpm  field_black.xpm  field_empty.xpm  field_mark.xpm  field_mark2.xpm  field_player1.xpm  field_player3.xpm  field_player4.xpm  field_removed.xpm  stone_black.xpm  stone_grey.xpm  stone_white.xpm
holtz/sounds/: Makefile.am  Makefile.in
holtz/zertz/: Makefile.am  ai.cpp  ai.hpp  animations.cpp  animations.hpp  bgp.cpp  bgp.hpp  dialogs.cpp  dialogs.hpp  manager.cpp  manager.hpp  network.cpp  network.hpp  pbm.cpp  pbm.hpp  wxzertz.cpp  wxzertz.hpp  zertz.cpp  zertz.hpp
htdocs/: bloks.php  down.php  dvonn.php  help.php  helpdsum.php  helpprog.php  helprsum.php  holtz.css  index.html  index.php  line-20-left.psp  links.php  menu.inc.php  news.php  relax.php  robots.txt  sitemap.xml  zertz.php
locale/de/: Makefile.am
locale/de/LC_MESSAGES/: holtz-hotkey.mo  holtz-hotkey.po  holtz.mo  holtz.po
relax/: Makefile.am  ai.cpp  animations.hpp  bgp.cpp  bgp.hpp  dialogs.cpp  main.cpp  relax.cpp  relax.hpp  wxrelax.cpp  wxrelax.hpp
skins/: unpack_skins
skins/dvonn60/skin/: skin.ini
skins/eins/: click_mark.xpm  field_empty.xpm  field_mark.xpm  field_player2.xpm  field_white.xpm  stone_white.xpm
skins/hex100/: click_mark.xpm  field_empty_2.xpm  stone_black.xpm  stone_mark.xpm  stone_white.xpm
skins/hex100/skin/: skin.ini
skins/hex50/: field_empty.xpm  skin.hpp  skin.hpp~
skins/hex70/: click_mark.xpm  field_black.xpm  field_mark.xpm  skin.hpp  stone_mark.xpm
skins/purist50/: field_black.xpm  field_grey.xpm  field_mark.xpm  field_removed.xpm  field_white.xpm  skin.hpp  skin.hpp~  stone_grey.xpm  stone_mark.xpm  stone_white.xpm
skins/relax60/skin/: skin.ini  stone_0_1.xcf  stone_0_5.xcf  stone_0_9.xcf  stone_1_2.xcf  stone_1_6.xcf  stone_1_7.xcf  stone_2_3.xcf  stone_2_4.xcf  stone_2_8.xcf
skins/relax60_rotated/skin/: stone_0_1.xcf  stone_1_2.xcf  stone_2_3.xcf
skins/save/dvonn50/skin/: skin.ini
skins/save/dvonn70/skin/: skin.ini
skins/save/hex100/: field_empty.xpm  field_mark.xpm  field_removed.xpm  skin.hpp  stone_grey.xpm
skins/save/hex100/.xvpics/: click_mark.xpm  field_grey.xpm  stone_white.xpm
skins/save/hex50/: click_mark.xpm  field_black.xpm  field_grey.xpm  field_mark.xpm  field_removed.xpm  field_white.xpm  stone_black.xpm  stone_grey.xpm  stone_white.xpm
skins/save/hex70/: background.xpm  field_empty.xpm  field_grey.xpm  field_removed.xpm  field_white.xpm  skin.hpp  stone_black.xpm  stone_grey.xpm  stone_white.xpm
skins/save/purist50/: click_mark.xpm  field_empty.xpm  stone_black.xpm
skins/zertz60/skin/: skin.ini  skin.ini.orig
skins/zertz70/skin/: skin.ini
skins/zertz80/skin/: skin.ini
sounds/: Makefile.am
zertz/: Makefile.am  ai.cpp  animations.cpp  bgp.cpp  dialogs.cpp  manager.cpp  network.hpp  wxzertz.cpp  wxzertz.hpp
(+21 files in other folders)
