INCLUDES = -I$(srcdir)/..

noinst_LIBRARIES = libdvonn.a
libdvonn_a_SOURCES = \
	dvonn.hpp dvonn.cpp wxdvonn.hpp wxdvonn.cpp \
	animations.hpp animations.cpp \
	dialogs.hpp dialogs.cpp manager.hpp manager.cpp \
	pbm.hpp pbm.cpp littlegolem.hpp littlegolem.cpp \
	network.hpp network.cpp #ai.hpp ai.cpp 

